--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,8 @@
   align-items: center;
   flex-direction: column;
   gap: 10px;
+
+  margin-bottom: 10px;
 }
 
 .auth-link {
@@ -65,18 +67,228 @@
 
 .base-start {
   display: flex;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 10px;
 }
 
-.add-comment {
+.base-start--col {
+  flex-direction: column;
+}
+
+.add-comments__wrapper {
+  height: 100px;
+
+  background-color: white;
+
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+.full-hw {
   height: 100%;
+  width: 100%;
+}
+
+.comment-input {
+  background-color: white;
+  color: black;
+
+  flex-grow: 1;
+
+  padding: 9px 9px 0;
+  border: 2px solid hsl(223, 19%, 93%);
+  border-radius: 8px;
+
+  overflow: hidden;
+  resize: none;
 }
 
 .test {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
+
   background-color: red;
 
   border-radius: 100%;
+}
+
+.comments {
+  position: absolute;
+  top: 0;
+  left: 50%;
+
+  height: 100%;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  transform: translateX(-50%);
+}
+
+.send-btn {
+  background: hsl(238, 40%, 52%);
+  text-transform: uppercase;
+
+  transition: opacity 250ms ease;
+}
+
+.send-btn--self-end {
+  align-self: flex-end;
+}
+
+.send-btn:hover {
+  opacity: 0.7;
+}
+
+.comments-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  overflow-y: auto;
+  scroll-behavior: smooth;
+
+  margin: 10px 0;
+}
+
+.comments-list-comment {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 30px;
+
+  background-color: white;
+
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.comments-list-comment__vote {
+  background-color: hsl(228, 33%, 97%);
+
+  border-radius: 12px;
+}
+
+.comments-list-comment__vote-text {
+  font-weight: 700;
+
+  color: hsl(238, 40%, 52%);
+}
+
+.comments-list-comment__vote-btn {
+  background-color: transparent;
+
+  border: none;
+}
+
+.comments-list-comment__vote-btn:focus {
+  outline: none;
+}
+
+.comments-list-comment__vote-btn > svg {
+  fill: #c5c6ef;
+
+  transition: fill 250ms ease;
+}
+
+.comments-list-comment__vote-btn:hover > svg {
+  fill: hsl(238, 40%, 52%);
+}
+
+.comments-list-comment__wrapper {
+  display: flex;
+
+  gap: 10px;
+
+  flex-grow: 1;
+
+  flex-direction: column;
+}
+
+.comments-list-comment__container--flex {
+  display: flex;
+
+  gap: 10px;
+
+  align-items: center;
+}
+
+.comments-list-comment__container--between {
+  justify-content: space-between;
+}
+
+.comments-list-comment__img {
+  height: 30px;
+  width: 30px;
+
+  border-radius: 100%;
+}
+
+.comments-list-comment__name {
+  font-weight: bold;
+
+  color: hsl(212, 24%, 26%);
+}
+
+.comments-list-comment__you {
+  font-size: 12px;
+  font-weight: bold;
+
+  background-color: hsl(238, 40%, 52%);
+
+  padding: 3px 5px 5px;
+  border-radius: 2px;
+}
+
+.comments-list-comment__text--gray {
+  color: hsl(211, 10%, 45%);
+
+  text-align: start;
+}
+
+.comments-list-comment__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  color: hsl(238, 40%, 52%);
+  background-color: transparent;
+
+  padding: 0;
+
+  border: none;
+
+  transition: opacity 250ms ease;
+}
+
+.comments-list-comment__btn:focus {
+  outline: none;
+}
+
+.comments-list-comment__btn:hover {
+  opacity: 0.7;
+}
+
+.comments-list-comment__btn--red {
+  color: hsl(358, 79%, 66%);
+}
+
+.reply {
+  border-left: 2px solid hsl(228, 33%, 97%);
+  padding-left: 35px;
+  margin-left: 35px;
+  margin-top: 10px;
+}
+
+.spinner {
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
