--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,9 @@
 }
 
 .add-comments__wrapper {
-  height: 100px;
+  height: 130px;
+
+  position: relative;
 
   background-color: white;
 
@@ -105,11 +107,9 @@
   resize: none;
 }
 
-.test {
+.user-avatar {
   height: 40px;
   width: 40px;
-
-  background-color: red;
 
   border-radius: 100%;
 }
@@ -145,6 +145,8 @@
 }
 
 .comments-list {
+  height: 80vh;
+
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -156,6 +158,7 @@
 }
 
 .comments-list-comment {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -279,6 +282,10 @@
 }
 
 .reply {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
   border-left: 2px solid hsl(228, 33%, 97%);
   padding-left: 35px;
   margin-left: 35px;
@@ -291,4 +298,129 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.container-min-h {
+  min-height: 300px;
+}
+
+.tag {
+  color: hsl(238, 40%, 52%);
+  font-weight: 600;
+}
+
+.modal-title {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+
+  line-height: 1.5;
+  letter-spacing: 0.1rem;
+
+  margin-bottom: 18px;
+}
+
+.modal-btn-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+
+  margin-top: 24px;
+}
+
+.modal-btn {
+  width: 100%;
+
+  text-transform: uppercase;
+
+  background-color: hsl(211, 10%, 45%);
+
+  transition: opacity 250ms ease;
+}
+
+.modal-btn:hover {
+  opacity: 0.7;
+}
+
+.modal-btn--red {
+  background-color: hsl(358, 79%, 66%);
+}
+
+.modal-container {
+  width: 380px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border-radius: 8px;
+  padding: 32px;
+}
+
+@media screen and (max-width: 550px) {
+  .comments {
+    display: inline-block;
+  }
+
+  .modal-container {
+    width: 90vw;
+
+    padding: 24px 32px;
+  }
+
+  .full-hw {
+    height: auto;
+    width: auto;
+  }
+
+  .add-comments__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    height: 180px;
+  }
+
+  .send-btn {
+    padding: 8px 18px;
+  }
+
+  .comment-input {
+    position: absolute;
+    top: 15px;
+    left: 5vw;
+
+    width: 90vw;
+    height: 80px;
+  }
+
+  .comments-list {
+    height: calc(100vh - 200px);
+  }
+
+  .reply {
+    padding-left: 10px;
+    margin-left: 10px;
+  }
+
+  .comments-list-comment {
+    padding-bottom: 70px;
+  }
+
+  .comments-list-comment__vote {
+    position: absolute;
+    bottom: 15px;
+    left: 10px;
+
+    display: flex;
+    align-items: center;
+  }
+
+  .action-btns-container {
+    position: absolute;
+    bottom: 25px;
+    right: 10px;
+  }
 }
